# ToHDL

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  Cargo.toml  README.md  build.sh  bytecode.py  clean.sh  codegen.py  even_fib.sv  generated.sv  genindex.html  graph.dot  index.html  insert_call.dot  insert_func_nodes.dot  insert_phi.dot  lower_for.py  make_ssa.dot  my_testing.py  objects.inv  p2v.py  p2v.sv  p2v_tb.sv  py-modindex.html  pyproject.toml  python2verilog.api.html  python2verilog.backend.html  python2verilog.backend.verilog.html  python2verilog.exceptions.html  python2verilog.frontend.html  python2verilog.html  python2verilog.ir.html  python2verilog.optimizer.html  python2verilog.simulation.html  python2verilog.utils.html  search.html  searchindex.js  testing2.pyi
.github/workflows/: CI.yml  cargo.yaml  docs.yaml  docs.yml  docs_rust.yaml  linting.yml  maturin.yml  packaging.yml  pytest.yml
_modules/: index.html
_modules/python2verilog/: exceptions.html
_modules/python2verilog/api/: modes.html
_modules/python2verilog/ir/: context.html  expressions.html  graph.html  instance.html  signals.html
_modules/python2verilog/utils/: decorator.html  env.html  fifo.html  generics.html  lines.html  mit_license.html  peek_counter.html  typed.html
_sources/: index.rst.txt  python2verilog.api.rst.txt  python2verilog.backend.rst.txt  python2verilog.backend.verilog.rst.txt  python2verilog.exceptions.rst.txt  python2verilog.frontend.rst.txt  python2verilog.ir.rst.txt  python2verilog.optimizer.rst.txt  python2verilog.rst.txt  python2verilog.simulation.rst.txt  python2verilog.utils.rst.txt
crates/codegen/: Cargo.toml  braun_NodeIndex(10)_.dot  braun_NodeIndex(11)_.dot  braun_NodeIndex(12)_.dot  braun_NodeIndex(23)_.dot  braun_NodeIndex(25)_.dot  braun_NodeIndex(27)_.dot  braun_NodeIndex(29)_.dot  braun_NodeIndex(31)_.dot  braun_NodeIndex(4)_.dot  braun_NodeIndex(6)_.dot  braun_NodeIndex(7)_.dot  braun_NodeIndex(9)_.dot  debug_0.dot  debug_1.dot  debug_2.dot  graph.dot  lower_to_fsm_0.dot  lower_to_fsm_1.dot  lower_to_fsm_2.dot  lower_to_fsm_3.dot  lower_to_fsm_4.dot  lower_to_fsm_5.dot  original.dot  panic.dot
crates/codegen/src/: lib.rs  python.rs  verilog.rs
crates/codegen/src/verilog/: clean_assignments.rs  expr.rs  helpers.rs  memory.rs  module.rs  state.rs
crates/frontend/: Cargo.toml  visitor.dot
crates/frontend/src/: lib.rs  parser.rs  visitor.rs
crates/ir/: Cargo.toml  graph.dot
crates/ir/src/: expr.rs  graph.rs  lib.rs
crates/ir/src/expr/: expr.rs  operation.rs
crates/ir/src/graph/: cfg.rs  edge.rs  graph.rs  node.rs
crates/ir/src/graph/edge/: branch.rs  none.rs
crates/ir/src/graph/node/: assign.rs  branch.rs  call.rs  external.rs  func.rs  term.rs
crates/passes/: Cargo.toml  braun.dot  braun_NodeIndex(12)_.dot  braun_NodeIndex(16)_.dot  braun_NodeIndex(6)_.dot  braun_NodeIndex(9)_.dot  insert_call.dot  insert_func_nodes.dot  insert_phi.dot  loop_detector.dot  lower_to_fsm.dot  lower_to_fsm_0.dot  lower_to_fsm_1.dot  lower_to_fsm_2.dot  lower_to_fsm_3.dot  lower_to_fsm_4.dot  make_ssa.dot  manager.dot  rmv_unread_vars.dot
crates/passes/src/: algorithms.rs  insert_call.rs  insert_func.rs  insert_phi.rs  lib.rs  lower_to_fsm.rs  make_ssa.rs  manager.rs  optimize.rs  transform.rs
crates/passes/src/algorithms/: inline_extern_func.rs  loop_detector.rs  split.rs
crates/passes/src/optimize/: remove_unread_vars.rs  rmv_redundant_calls  rmv_redundant_calls.rs  rmv_unread_vars.rs
crates/passes/src/transform/: braun_et_al.rs  explicit_return.rs  fix_branch.rs  insert_call.rs  insert_func.rs  insert_phi.rs  lower_to_fsm.rs  lower_to_fsm_v2.rs  make_ssa.rs  nonblocking.rs  rename_variables.rs
crates/pytohdl/: Cargo.toml
crates/pytohdl/python/: test_python_backend.py  test_verilog_backend.py
crates/pytohdl/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: function_call.rs  ifelse.rs  loops.rs
design/: bytecode.py  codegen.py  generator.c  generator.h  lower_for.py  main.c  main.py  parser.py  program  sum-er.py
design/floating_point/: float.py
design/linear_algebra/: matrix_multiply.py  matrix_multiply_io_generator.py  matrix_multiply_output_generator.py
examples/: decorators.py  notebook.ipynb
python/: main.py
python2verilog/: pytohdl.pyi
python2verilog/api/: context.py  python.py  verilogify.py
python2verilog/frontend/: function.py
python2verilog/ir/: __init__.py  context.py  expressions.py
python2verilog/utils/: decorator.py
pytohdl/: Cargo.toml  pyproject.toml
pytohdl/python/: test_translate.py  test_verilog_backend.py
pytohdl/src/: lib.rs
src/: graph.rs  lib.rs  main.rs  testing.rs  transforms.rs
src/elements/: node.rs
src/graph/: expr.rs
src/ir/: graph.rs  mod.rs  nodes.rs  outer.rs  pass.rs
src/ir/expr/: expr.rs
src/ir/graph/: edge.rs  graph.rs  mod.rs  node.rs
src/ir/graph/node/: assign.rs  branch.rs  call.rs  func.rs  term.rs
src/ir/node/: mod.rs  node.rs
src/ir/pass/: insert_call.rs  insert_func.rs  insert_phi.rs  make_ssa.rs
src/python/: mod.rs  node.rs
testing1/: Makefile  bytecode.py  generator.c  generator.h  main.c  sum-er.py
tests/: conftest.py
tests/api/: test_text.py
tests/frontend/: test_generator_parser.py
tests/integration/: base_tests.py  functions.py  test_multi.py  test_single.py  utils.py
tests/simulation/: test_simulation.py
