[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
tohdl-ir = { path = "./crates/ir" }
tohdl-frontend = { path = "./crates/frontend" }
tohdl-passes = { path = "./crates/passes" }
tohdl-codegen = { path = "./crates/codegen" }
tohdl-tests = { path = "./crates/tests" }
python2verilog = { path = "./crates/pytohdl" }
