[project]
name = "python2verilog"
version = "0.5.1"
authors = [{ name = "Kerry Wang", email = "kerrywang369@gmail.com" }]
description = "Converts a subset of python generator functions into synthesizable sequential SystemVerilog"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]

dependencies = [
    "typing-extensions",
]

[project.optional-dependencies]
full = ["matplotlib", "numpy", "dash_cytoscape", "dash"]
dev = [
    "maturin",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
    "pandas",
    "tabulate",
    "matplotlib",
    "networkx[default]",
    "dash_cytoscape",
    "dash",
    "parameterized",
    "pylint",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/WorldofKerry/ToHDL/"
"Bug Tracker" = "https://github.com/WorldofKerry/ToHDL/issues"

[build-system]
requires = ["maturin>=1.5,<2.0", "typing-extensions"]
build-backend = "maturin"

[tool.setuptools.packages.find]
"include" = ["python2verilog*"]

[tool.pytest.ini_options]
testpaths = "python2verilog tests/"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s %(filename)s:%(lineno)s %(message)s"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylint.MASTER]
ignore-patterns = '.*\.pyi'

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_any_generics = true
ignore_missing_imports = true
check_untyped_defs = true
# disallow_untyped_defs = true # TODO: require

[tool.maturin]
# python-source = "python2verilog"
features = ["pyo3/extension-module"]
manifest-path = "crates/pytohdl/Cargo.toml"
module-name = "python2verilog.pytohdl"
