[package]
name = "tohdl-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-parser = { git = "https://github.com/RustPython/Parser.git" }
rustpython-ast = { git = "https://github.com/RustPython/Parser.git", features = [
    "visitor",
] }
tohdl-ir.workspace = true
