[package]
name = "pytohdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytohdl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
tohdl-ir.workspace = true
tohdl-frontend.workspace = true
tohdl-passes.workspace = true
tohdl-codegen.workspace = true