[package]
name = "python2verilog"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python2verilog"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.20.0"
tohdl-ir.workspace = true
tohdl-frontend.workspace = true
tohdl-passes.workspace = true
tohdl-codegen.workspace = true
